[tool.isort]
profile = "black"
multi_line_output = 3
extend_skip = ["api_pb2.py", "api_options_pb2.py"]

[tool.black]
exclude = 'api_pb2.py|api_options_pb2.py'
target-version = ['py39']

[tool.pylint.MASTER]
reports = 'no'
ignore = [
    "api_pb2.py",
    "api_options_pb2.py"
]
max-statements=60
max-returns=8
max-branches=14
disable = [
  "fixme",
  "too-few-public-methods",
  "too-many-instance-attributes",
  "wildcard-import",
  "too-many-arguments",
  "line-too-long",
  "protected-access",
  "unused-wildcard-import",
  "import-outside-toplevel",
  "raise-missing-from",
  "bad-mcs-classmethod-argument",
  "duplicate-code",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"