[metadata]
name = remoteprotocols
version = attr: package.__version__
author = Adrian Panella
author_email = ianchi74@outlook.com
description = Manage and convert many IR / RF remote protocols
long_description = file: README.md
long_description_content_type = text/markdown
license=MIT
license_files=LICENSE.md
url = https://github.com/ianchi/remoteprotocols
project_urls =
    Bug Tracker = https://github.com/ianchi/remoteprotocols/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Embedded Systems
    Topic :: Home Automation

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
include_package_data=True

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
        remoteprotocols = remoteprotocols.__main__:main

[flake8]
max-line-length = 120
# Following 4 for black compatibility
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring

ignore =
    E501,
    W503,
    E203,
    D202,

exclude = api_pb2.py, api_options_pb2.py

[bdist_wheel]
universal = 1
